Begin disk. Change of venue.

--- a/notes/rx11.md
+++ b/notes/rx11.md
@@ -6,7 +6,7 @@
 
 ## Registers
 
-### RXCS (777170)
+### RXCS (777170 or 177170)
 
 #### BIT 0 : GO
 Initiates a command to RX01. **Write-only**
@@ -50,10 +50,31 @@ all of the devices on UNIBUS. **Write-only**
 Set to indicate error has occurred.
 Cleared on initiation of new command or Initialize. **Read-only**
 
-### RXDB (777172) Data Buffer
+### RXDB (777172 or 177172) Data Buffer
 General purpose data path between RX01 and interface.
 May represent one of four RX01 registers.
 
 If RX01 is executing a command, will only accept data
 if RXCS bit 7 is set. Valid data can only be read when
 RXCS bit 7 is set.
+
+## Order of Operations
+Best guess at order of operations from the manuals.
+
+1. Read Sector
+    - Transfer command in RXCS
+    - Wait for transfer request flag
+    - Transfer sector in RXDB
+    - Wait for transfer request flag
+    - Transfer track in RXDB
+    - Wait for done flag
+2. Empty Buffer
+
+1. Fill Buffer
+2. Write Sector
+    - Transfer command in RXCS
+    - Wait for transfer request flag
+    - Transfer sector in RXDB
+    - Wait for transfer request flag
+    - Transfer track in RXDB
+    - Wait for done flag
